--- a/WebApplication1/Views/Employee/CreateEmployee.cshtml
+++ b/WebApplication1/Views/Employee/CreateEmployee.cshtml
@@ -8,6 +8,8 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <script src="~/Scripts/Validations.js"></script>
+
     <script>
     function ResetForm() {
         document.getElementById('TxtFName').value = "";
@@ -66,7 +68,7 @@
 
                 <tr>
                     <td colspan="2">
-                        <input type="submit" name="BtnSubmit" value="Save Employee" />
+                        <input type="submit" name="BtnSubmit" value="Save Employee" onclick="return IsValid();" />
                         <input type="submit" name="BtnSubmit" value="Cancel" />
                         <input type="button" name="BtnReset"  value="Reset" onclick="ResetForm();" />
                     </td>
