--- a/WebApplication1/Views/Employee/Index.cshtml
+++ b/WebApplication1/Views/Employee/Index.cshtml
@@ -11,7 +11,7 @@
     <title>MyView</title>
 </head>
 <body>
-    <div style="text-align:right"> Hello, @Model.UserName </div>
+    <div style="text-align:right"> Hello, @Model.UserName <a href="/Authentication/Logout">Logout</a></div>
     <hr />
     <div>
         <a href ="/Employee/AddNew">Add New</a>
