--- a/WebApplication1/Views/Authentication/Login.cshtml
+++ b/WebApplication1/Views/Authentication/Login.cshtml
@@ -17,6 +17,7 @@
         {
             @Html.LabelFor(c => c.UserName)
             @Html.TextBoxFor(x => x.UserName)
+            @Html.ValidationMessageFor(x => x.UserName)
             <br />
             @Html.LabelFor(c => c.Password)
             @Html.PasswordFor(x => x.Password)
