--- a/WebApplication1/Views/Employee/Index.cshtml
+++ b/WebApplication1/Views/Employee/Index.cshtml
@@ -32,6 +32,9 @@
                 </tr>
                 }
             </table>
+        @{
+            Html.RenderPartial("Footer", Model.FooterData);
+        }
 </div>
 </body>
 </html>
