--- a/WebApplication1/Views/Employee/Index.cshtml
+++ b/WebApplication1/Views/Employee/Index.cshtml
@@ -13,8 +13,10 @@
 <body>
     <div style="text-align:right"> Hello, @Model.UserName <a href="/Authentication/Logout">Logout</a></div>
     <hr />
+    @{
+        Html.RenderAction("GetAddNewLink");
+    }
     <div>
-        <a href ="/Employee/AddNew">Add New</a>
             <table border="1">
                 <tr>
                     <th>Employee Name</th>
