--- a/WebApplication1/Views/Employee/Index.cshtml
+++ b/WebApplication1/Views/Employee/Index.cshtml
@@ -1,42 +1,29 @@
-﻿@model  WebApplication1.ViewModels.EmployeeListViewModel
-
+﻿@using WebApplication1.ViewModels
+@model EmployeeListViewModel
 @{
-    Layout = null;
+    Layout = "~/Views/Shared/MyLayout.cshtml";
 }
-<!DOCTYPE html>
 
-<html>
-<head>
-    <meta name="viewport" content="width=device-width" />
-    <title>MyView</title>
-</head>
-<body>
-    <div style="text-align:right"> Hello, @Model.UserName <a href="/Authentication/Logout">Logout</a></div>
-    <hr />
-    @{
-        Html.RenderAction("GetAddNewLink");
-    }
+@section TitleSection{
+    MyView
+}
+@section ContentBody{
     <div>
-            <table border="1">
-                <tr>
-                    <th>Employee Name</th>
-                    <th>Salary</th>
-                </tr>
-                @foreach (WebApplication1.ViewModels.EmployeeViewModel item in Model.Employees)
-            {
-                    <tr>
-                        <td>
-                            @item.EmployeeName
-                        </td>
-                        <td style="background-color:@item.SalaryColor">
-                            @item.Salary
-                    </td>
-                </tr>
-                }
-            </table>
         @{
-            Html.RenderPartial("Footer", Model.FooterData);
+            Html.RenderAction("GetAddNewLink");
         }
-</div>
-</body>
-</html>
+        <table border="1">
+            <tr>
+                <th>Employee Name</th>
+                <th>Salary</th>
+            </tr>
+            @foreach (EmployeeViewModel item in Model.Employees)
+            {
+                <tr>
+                    <td>@item.EmployeeName</td>
+                    <td style="background-color:@item.SalaryColor">@item.Salary</td>
+                </tr>
+            }
+        </table>
+    </div>
+}
