--- a/WebApplication1/Views/Employee/CreateEmployee.cshtml
+++ b/WebApplication1/Views/Employee/CreateEmployee.cshtml
@@ -1,15 +1,15 @@
 ﻿@using WebApplication1.ViewModels
 @model CreateEmployeeViewModel
-
 @{
-    Layout = null;
+    Layout = "~/Views/Shared/MyLayout.cshtml";
 }
 
-<!DOCTYPE html>
-<html>
-<head>
-    <script src="~/Scripts/Validations.js"></script>
+@section TitleSection{
+    CreateEmployee
+}
 
+@section HeaderSection{
+    <script src="~/Scripts/Validations.js"></script>
     <script>
     function ResetForm() {
         document.getElementById('TxtFName').value = "";
@@ -17,11 +17,8 @@
         document.getElementById('TxtSalary').value = "";
     }
     </script>
-    
-    <meta name="viewport" content="width=device-width" />
-    <title>CreateEmployee</title>
-</head>
-<body>
+}
+@section ContentBody{
     <div>
         <form action="/Employee/SaveEmployee" method="post" id="EmployeeForm">
             <table>
@@ -68,14 +65,13 @@
 
                 <tr>
                     <td colspan="2">
+
                         <input type="submit" name="BtnSubmit" value="Save Employee" onclick="return IsValid();" />
                         <input type="submit" name="BtnSubmit" value="Cancel" />
-                        <input type="button" name="BtnReset"  value="Reset" onclick="ResetForm();" />
+                        <input type="button" name="BtnReset" value="Reset" onclick="ResetForm();" />
                     </td>
                 </tr>
-            </table>        
+            </table>
         </form>
-
     </div>
-</body>
-</html>
+}
